<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.CardView
        android:id="@+id/main_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:animateLayoutChanges="true"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="9dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="14dp">


                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="07dp"
                    android:layout_marginBottom="10dp">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imgSanto"
                        android:layout_width="75dp"
                        android:layout_height="65dp"
                        android:contentDescription="Saynt avatar"
                        android:scaleType="fitCenter"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="HardcodedText"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/txtNome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:lines="1"
                        android:maxLength="40"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        app:layout_constraintLeft_toRightOf="@+id/imgSanto"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@sample/santos.json/names/short_names/name" />

                    <TextView
                        android:id="@+id/txtComemoracao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:lines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        app:layout_constraintLeft_toRightOf="@+id/imgSanto"
                        app:layout_constraintTop_toBottomOf="@+id/txtNome"
                        tools:text="@sample/santos.json/names/datas_exemplo/data" />

                    <TextView
                        android:id="@+id/txtAsterisco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/asterisco"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/dourado"
                        app:layout_constraintLeft_toRightOf="@+id/txtComemoracao"
                        app:layout_constraintTop_toBottomOf="@+id/txtNome" />


                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/prayButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="05dp"
                        android:layout_marginEnd="07dp"
                        android:background="?selectableItemBackground"
                        android:padding="03dp"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_hand_prayer_gray_24dp" />

                    <TextView
                        android:id="@+id/txtPrayQty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/item_count"
                        android:text="@string/number_example"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/txtPrayQty"
                        tools:ignore="SmallSp" />

                </android.support.constraint.ConstraintLayout>

                <TextView
                    android:id="@+id/txtDescricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum_dolor" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
